# logger

./: CMakeLists.txt  Makefile  README.md  logger.cpp
include/: logger.h
src/: logger.cpp
tests/: .main.cpp.swp  CMakeLists.txt  main.cpp
